--- a/divfr.html
+++ b/divfr.html
@@ -65,45 +65,51 @@
             background-color: #0056b3;
         }
         .switch {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 34px;
-        }
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: 0.4s;
-            border-radius: 30px;
-        }
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: 0.4s;
-            border-radius: 50%;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-        input:checked + .slider {
-            background-color: #5245ff;
-        }
-        input:checked + .slider:before {
-            transform: translateX(26px);
-        }
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 20px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+input:checked + .slider {
+    background-color: #5245ff;
+}
+
+input:checked + .slider:before {
+    transform: translateX(20px);
+}
+
         table {
             width: 100%;
             border-collapse: collapse;
@@ -166,17 +172,27 @@
         }
 
         .labels-container-tc {
-            margin-top: 20px;
-            text-align: left;
-            font-size: 12px;
-            color: #727272;
-            font-style: italic;
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 400px;
-        }
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 0.4s ease, max-height 0.4s ease;
+    margin-top: 20px;
+    text-align: left;
+    font-size: 12px;
+    color: #727272;
+    font-style: italic;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    max-width: 400px;
+}
+
+.labels-container-tc.show {
+    opacity: 1;
+    max-height: 200px;
+}
+
 
         .error-message {
             color: red;
@@ -267,10 +283,18 @@
 
     <script>
 
-        function toggleLabelsContainerTc() {
-            const labelsContainerTc = document.querySelector('.labels-container-tc');
-            labelsContainerTc.style.display = labelsContainerTc.style.display === 'none' ? 'block' : 'none';
-        }
+function toggleLabelsContainerTc() {
+    const labelsContainerTc = document.querySelector('.labels-container-tc');
+    const isChecked = document.querySelector('.switch input').checked;
+
+    if (isChecked) {
+        labelsContainerTc.classList.add('show');
+    } else {
+        labelsContainerTc.classList.remove('show');
+    }
+}
+
+
 
         function fraccionarNumero() {
             const numero = document.getElementById("numero").value;
@@ -312,7 +336,6 @@
                 fraccion = Math.round(fraccion / 5) * 5;
                 fraccion = Math.min(fraccion, restante);
 
-                // Verificar si la fracción ya existe y si es menor o igual al restante
                 if (!partes.has(fraccion) && fraccion <= restante) {
                     partes.add(fraccion);
                     restante -= fraccion;
@@ -509,8 +532,7 @@ async function fetchData() {
                     document.getElementById('calculoAdicional').innerHTML = '';
                 }
             }
-            
-            // Successful response, so we break the loop
+
             return;
 
         } catch (error) {
@@ -518,11 +540,9 @@ async function fetchData() {
         }
     }
 
-    // If we reach here, both tokens have failed
     document.getElementById('data').innerHTML = `Error al obtener los datos: Todos los tokens fallaron.`;
 }
 
-// Evento para recalcular cuando el usuario cambia el tipo de cambio
 document.getElementById("tipoCambio").addEventListener("input", fetchData);
 
 fetchData();
